force-app/main/default/objects/OrderItem/fields/IsFullBackOrder__c.field-meta.xml
<CustomField>
    <fullName>IsFullBackOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Full Back Order</label>
    <type>Checkbox</type>
</CustomField>