force-app/main/default/objects/OrderItem/fields/Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Status__c</fullName>
    <label>Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
            </value>
            <value>
                <fullName>Fechado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>