force-app/main/default/objects/OrderItem/fields/OrderItemSAPCode__c.field-meta.xml
<CustomField>
    <fullName>OrderItemSAPCode__c</fullName>
    <externalId>true</externalId>
    <label>Order Item SAP Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>