force-app/main/default/objects/OrderItem/fields/Quantity_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Invoiced__c</fullName>
    <description>Integration will fill this field with SAP information about partial invoiced orders.</description>
    <label>Quantity Invoiced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>