force-app/main/default/objects/OrderItem/fields/Quantity_Pending__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Pending__c</fullName>
    <description>Integration will fill this field with SAP information about partial invoiced orders with the quantity still to be invoiced.</description>
    <label>Quantity Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>