force-app/main/default/objects/OrderItem/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <description>Order SAP Code + Line Number</description>
    <externalId>true</externalId>
    <label>SAP Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>