force-app/main/default/objects/OrderItem/fields/ShopifyId__c.field-meta.xml
<CustomField>
    <fullName>ShopifyId__c</fullName>
    <externalId>true</externalId>
    <label>Shopify Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>