force-app/main/default/objects/OrderItem/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>C2O2 - VP - Field to created to support Insujet project.</description>
    <label>SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>